force-app/main/default/objects/Benefit__c/Benefit__c.object-meta.xml
<CustomObject>
    <label>Benefit</label>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>