force-app/main/default/objects/Benefit__c/fields/BE_Activities__c.field-meta.xml
<CustomField>
    <fullName>BE_Activities__c</fullName>
    <label>BE Activities</label>
    <referenceTo>Initiatives__c</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>