force-app/main/default/objects/Benefit__c/fields/Impacted_Unit__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Unit__c</fullName>
    <label>Impacted Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>SEAU</fullName>
            </value>
            <value>
                <fullName>SE-EE</fullName>
            </value>
            <value>
                <fullName>SEAM</fullName>
            </value>
            <value>
                <fullName>SLMT</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>HSSE</fullName>
            </value>
            <value>
                <fullName>Business Excellence</fullName>
            </value>
            <value>
                <fullName>Supply &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>Integrated Gas</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Global Commercial</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Trading &amp; Supply</fullName>
            </value>
            <value>
                <fullName>Upstream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>