force-app/main/default/objects/Benefit__c/fields/Included_In_LE__c.field-meta.xml
<CustomField>
    <fullName>Included_In_LE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included In LE?</label>
    <type>Checkbox</type>
</CustomField>