force-app/main/default/objects/Benefit__c/fields/L1_Benefit_Type_Image__c.field-meta.xml
<CustomField>
    <fullName>L1_Benefit_Type_Image__c</fullName>
    <formula>IMAGE(&quot;https://stasco--tsbedev--c.cs100.content.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0681x0000008txE&amp;operationContext=CHATTER&amp;contentId=05T1x000000Ap0g&quot;, &quot;L1_Initiatives_Definitions&quot;, 100, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L1 Benefit Type Image</label>
    <type>Text</type>
</CustomField>