force-app/main/default/objects/Benefit__c/fields/L1_Category__c.field-meta.xml
<CustomField>
    <fullName>L1_Category__c</fullName>
    <formula>CASE(L1_Type__c ,
&quot;Value Generation&quot;, &quot;Value&quot;, 
&quot;OPEX – SG&amp;A&quot;, &quot;Cost&quot;,
&quot;OPEX – Direct Trading Costs&quot;, &quot;Cost&quot;,
&quot;OPEX – Other&quot;, &quot;Cost&quot;,
&quot;Other Costs Gross Margin&quot;, &quot;Cost&quot;,
&quot;Non-Accountable Costs&quot;, &quot;Cost&quot;,
&quot;N/A&quot;)</formula>
    <label>L1 Category</label>
    <type>Text</type>
</CustomField>