force-app/main/default/objects/Benefit__c/fields/L1_Type__c.field-meta.xml
<CustomField>
    <fullName>L1_Type__c</fullName>
    <label>L1 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value Generation</fullName>
            </value>
            <value>
                <fullName>OPEX – SG&amp;A</fullName>
            </value>
            <value>
                <fullName>OPEX – Direct Trading Costs</fullName>
            </value>
            <value>
                <fullName>OPEX – Other</fullName>
            </value>
            <value>
                <fullName>Other Costs Gross Margin</fullName>
            </value>
            <value>
                <fullName>Non-Accountable Costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>