force-app/main/default/objects/Benefit__c/fields/Total_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Total_Benefit__c</fullName>
    <formula>X2017_Benefit__c + X2018__c + X2019_Benefit__c + X2020_Benefit__c + X2021_Benefit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Benefit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>