force-app/main/default/objects/Benefit__c/fields/Total_Benefit_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Benefit_Sum__c</fullName>
    <label>Total Benefit Sum</label>
    <summarizedField>Benefit_By_Year__c.Benefit_Amount__c</summarizedField>
    <summaryForeignKey>Benefit_By_Year__c.Benefit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>