force-app/main/default/objects/Benefit__c/fields/X2017_Benefit__c.field-meta.xml
<CustomField>
    <fullName>X2017_Benefit__c</fullName>
    <label>2017 Benefit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>