force-app/main/default/objects/Benefit__c/fields/X2018__c.field-meta.xml
<CustomField>
    <fullName>X2018__c</fullName>
    <label>2018 Benefit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>