force-app/main/default/objects/Benefit__c/recordTypes/L1.recordType-meta.xml
<RecordType>
    <fullName>L1</fullName>
    <active>true</active>
    <description>Benefits that have a direct and certain impact on the bottom line</description>
    <label>L1</label>
</RecordType>