force-app/main/default/objects/Benefit__c/recordTypes/L2.recordType-meta.xml
<RecordType>
    <fullName>L2</fullName>
    <active>true</active>
    <description>Benefits that create potential opportunities for bottom line impact, but impact is uncertain</description>
    <label>L2</label>
</RecordType>