force-app/main/default/objects/Benefit__c/recordTypes/L3.recordType-meta.xml
<RecordType>
    <fullName>L3</fullName>
    <active>true</active>
    <description>Benefits that have no measurable financial impact</description>
    <label>L3</label>
</RecordType>