force-app/main/default/objects/Benefit__c/listViews/Record_Type_Null.listView-meta.xml
<ListView>
    <fullName>Record_Type_Null</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>BE_Activities__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Record Type Null</label>
    <language>en_US</language>
</ListView>